--- a/tex/problem2A.tex
+++ b/tex/problem2A.tex
@@ -34,12 +34,12 @@ where we have introduced $\mathcal{R}_0 = \beta\tau$. As seen in figure \ref{fig
 
 \subsection{c) Flattening the curve. }
 
-As seen from figure \ref{fig:SIR}, the peak of the infected people is rather close to being at $0.2$ when $\beta = 0.25$. Remark also that the peak occurs in the early stage of the epidemic. We use these observations to our favour when finding the \textit{largest} $\beta$ that will keep $I/N$\footnote{Note that I use fractions of people instead of actual numbers of people in this section, so that is why I refer to $I$ as if it is $I/N$ in the procedure below.} smaller than $0.2$ during the pandemic. To do this, I choose the following procedure:
+As seen from figure \ref{fig:SIR}, the peak of the infected people is rather close to being at $0.2$ when $\beta = 0.25$. Remark also that the peak occurs in the early stage of the epidemic. We use these observations in our favour when finding the \textit{largest} $\beta$ that will keep $I/N$\footnote{Note that I use fractions of people instead of actual numbers of people in this section, so that is why I refer to $I$ as if it is $I/N$ in the procedure below.} smaller than $0.2$ during the pandemic. To do this, I use the following procedure:
 
 \begin{algorithm}[H]
 	Choose a starting value for $\beta = \beta_0$\;
 	Choose a tolerance $\texttt{tol}$\;
-	Run the simulation of the SIR with the same parameters as in 2Aa, except with $\beta = \beta_0$\;
+	Run the simulation of the SIR equations with the same parameters as in 2Aa, except with $\beta = \beta_0$\;
 	Calculate $\mathcal{I} \coloneqq \max_{t\in[0,180]} I(t)$\;
 	\While{\texttt{err }$\coloneqq | \mathcal{I} - 0.2 | > \texttt{tol}$}{
 		\eIf{
@@ -47,14 +47,14 @@ As seen from figure \ref{fig:SIR}, the peak of the infected people is rather clo
 			}
 			{$\beta\gets \beta \cdot 2^{\texttt{err}}$}
 			{$\beta\gets \beta \cdot 2^{-\texttt{err}}$}
-		Run the simulation of the SIR with the same parameters as in 2Aa, except with the new value for $\beta$\;
-		Recalculate $\mathcal{I} \coloneqq \max_{t\in[0,180]} I(t)$\;	
+		Run the simulation of the SIR equations with the same parameters as in 2Aa, except with the new value for $\beta$\;
+		Recalculate $\mathcal{I} = \max_{t\in[0,180]} I(t)$\;	
 		}
 		
-	\caption{Finding the largest beta keeping $\max I$ \textit{less} than 0.2.}
+	\caption{Finding the largest beta keeping the maximum of $I$ \textit{less} than 0.2.}
 \end{algorithm} 
 
-This procedure is by no means any advanced piece of algorithm, but it ensures that $\beta$ is increased when the maximum of $I$ is less than $0.2$, and decreased when it is larger than $0.2$. Further, it also ensures that the "nudging" of beta in each step is less when the error is less. To get an estimate for the \textit{largest} $\beta$ one can have to keep $I/N$ \textit{less} than $0.2$, one should start off with an initial value $\beta_0$ for which the peak is less than $0.2$, so that one reaches the limit from below. Using $\beta_0 = 0.2$, one finds with the maximum value of $\beta = 0.228020370$, as given in table \ref{tab:2Acd} together with the deviation $0.2 - \max_{t\in[0,180]} I(t)$ this value gives rise to.  
+This procedure is by no means any advanced piece of algorithm, but it ensures that $\beta$ is increased when the maximum of $I$ is less than $0.2$, and decreased when it is larger than $0.2$. Further, it also ensures that the "nudging" of beta in each step is small when the error is small. To get an estimate for the \textit{largest} $\beta$ one can have to keep $I/N$ \textit{less} than $0.2$, one should start off with an initial value $\beta_0$ for which the peak is less than $0.2$, so that one reaches the limit from below. Using $\beta_0 = 0.2$, one finds with the maximum value of $\beta = 0.228020370$, as given in table \ref{tab:2Acd} together with the deviation $0.2 - \max_{t\in[0,180]} I(t)$ this value gives rise to.  
 
 
 %\begin{figure}[htb]
@@ -70,12 +70,12 @@ To find the minimum fraction of vaccinated people preventing an outbreak, $R(0)/
 
 \begin{algorithm}[H]
 	Choose a starting value for $R(0) = R_0$\;
-	Run the simulation of the SIR with the same parameters as in 2Aa, except with $R(0) = R_0$ \;
+	Run the simulation of the SIR equations with the same parameters as in 2Aa, except with $R(0) = R_0$ \;
 	Calculate the \texttt{slope} of the fraction of infected people in a semi-log plot for the first $15$\footnote{As people are typically sick for $10$ days ($\tau = 10$) I regard this time scale as long enough to detect whether the outbreak grows exponentially or decays.} days of the simulation\;
 	If the initial slope is negative it indicates that the outbreak dies out by itself\;
 	\While{\texttt{slope}$ > 0$}{
 		$R(0) \gets R \cdot 2 ^{\texttt{slope}}$ \;
-	Run the simulation of the SIR with the same parameters as in 2Aa, except with the new value for $R(0)$.\;
+	Run the simulation of the SIR equations with the same parameters as in 2Aa, except with the new value for $R(0)$.\;
 	Recalculate the \texttt{slope} in the semi-log axes.\;}
 	\caption{Finding the minimum fraction of initially vaccinated people for outbreaks to be impossible.}
 \end{algorithm} 
