--- a/tex/problem2B.tex
+++ b/tex/problem2B.tex
@@ -11,7 +11,7 @@ As seen in the plot in figure \ref{fig:SIR_stoch}, the $10$ different realisatio
 	\label{fig:SIR_stoch}
 \end{figure}
 
-To choose a suitable time-step for simulating this model, I run the simulation up to $t = 10$ days and find the deviation between the fraction of infected people with the semi-analytical result for the early stages given by equation \ref{eq:Iexp}. I compute this using the average of $200$ runs of the stochastic model. I include the same run with the deterministic model to see how the deviations relate to each other. This is shown in figure \ref{fig:timesteps}. Clearly, using this comparison is \textit{not} a good way of determining the time step we want to use for the deterministic model, as the solution approaches the reference values very quickly for the chosen step lengths. The stagnation observed here is probably due to the fact that the reference solution is an approximation itself! However, we see from this plot that if we choose a step length $\lesssim 0.01$, the deviations of the stochastic solution start to flatten out, and are close to the same order of magnitude as those of the deterministic model. I therefore always use a time step smaller than $0.01$ for simulating the stochastic models. In particular, I use $\Delta t = 0.005$ in problem B,C,D and Ea. For Eb I use $\Delta t = 0.01$ because the runtime become uncomfortably large when using smaller time steps.
+To choose a suitable time-step for simulating this model, I run the simulation up to $t = 10$ days and find the deviation between the fraction of infected people with the semi-analytical result for the early stages given by equation \ref{eq:Iexp}. I compute this using the average of $200$ runs of the stochastic model. I include the same run with the deterministic model to see how the deviations relate to each other. This is shown in figure \ref{fig:timesteps}. Clearly, using this comparison is \textit{not} a good way of determining the time step we want to use for the deterministic model, as the solution approaches the reference values very quickly for the chosen step lengths. The stagnation observed here is probably due to the fact that the reference solution is an approximation itself! However, we see from this plot that if we choose a step length $\lesssim 0.01$, the deviations of the stochastic solution start to flatten out, and become smaller than $10^{-5}$, which is the highest accuracy we can expect to get when using $100\,000$ people in the population for the stochastic model (i.e. less than one person difference in the fraction of infected). I therefore always use a time step smaller than $0.01$ for simulating the stochastic models. In particular, I use $\Delta t = 0.005$ in problem B,C,D and Ea. For Eb I use $\Delta t = 0.01$ because the runtime becomes uncomfortably large when using smaller time steps.
 
 For determining the step length to use for the deterministic model I create a reference solution using a relatively small time step, $\Delta t = 10^{-4}$, and then use the deviations between this and each run at the endpoint as a measure of the absolute error. After having done that, it is mostly a matter of preference how small a step length one wants to use. If I can accept an error of $10^{-8}$ in the fraction of susceptible after $50$ days --- corresponding to $1/1000$ of an individual --- I see from the plot in figure \ref{fig:timesteps_det} that I will have to use $\Delta t \lesssim 10^{-1}$. Since the runtimes of the simulation for $\Delta t < 10^{-2}$ for $50$ days are always less than $1$ second, I find that $\Delta t = 0.005$ is probably more than sufficient, and appropriate considering both runtime and accuracy.    
 \begin{figure}[htb]
@@ -82,7 +82,7 @@ There will always be a certain probability for an outbreak disappearing by itsel
 	\label{alg:prob_I}
 \end{algorithm} 
 
-In performing this procedure, I use a batch size of $500$ in each sweep. What we are estimating here is essentially a Bernoulli-distributed random variable, $X$: $X$ can take the realisations $1$ or $0$ with probabilities $p$ and $1-p$ respectively, and we assume all the $X_n$s to be independent \cite[~p.26]{Wassermann}. Then, as the variance of such a distribution is $p(1-p)$, the variance of the estimator for the probability, namely $\hat{p}$\footnote{That is, the mean value of $X_n$.}, is 
+In performing this procedure, I use a batch size of $500$ in each sweep. What we are estimating here is essentially a Bernoulli-distributed random variable, $X$: $X$ can take the realisations $1$ or $0$ with probabilities $p$ and $1-p$ respectively, and we assume all the $X_n$s to be independent \cite[~p.26]{Wassermann}. Then, as the variance of such a random variable is $p(1-p)$, the variance of the estimator for the probability, namely $\hat{p}$\footnote{That is, the mean value of $X_n$.}, is 
 $$
 	\mathrm{Var}(\hat{p}) =  \sum_{n= 1}^{B} \mathrm{Var}\left(\frac{X_n}{B}\right) = \frac{1}{B^2} \sum_{n= 1}^{B} \mathrm{Var}(X_n) = \frac{1}{B^2} \sum_{n= 1}^{B} p (1-p) = \frac{p(1-p)}{B},
 $$
