--- a/tex/problem2D.tex
+++ b/tex/problem2D.tex
@@ -22,7 +22,7 @@ and simulate the time evolution of each of the five states for $180$ days, as de
 
 To implement the Stochastic SEIIaR Commuter model, I choose the following procedure: 
 
-\begin{algorithm}[H]
+\begin{algorithm}[H]\label{alg:commuter}
 	Choose a population structure $\mathbf{M} \in \mathbb{N}^m \times \mathbb{N}^m$, i.e. an $m\times m$ matrix\;  
 	Set an end time $t_N$ and a time-step $\Delta t$\;
 	Set an initial state $\mathbf{X}_0 \in \mathbb{N}^m \times \mathbb{N}^m \times \mathbb{N}^5$, where entry $X_{0,ij}$ is the vector $\mathbf{v}$ of the variables $S,E,I,I_a,R$ for group $(i,j)$ in the matrix $\mathbf{M}$.\;
@@ -34,10 +34,10 @@ To implement the Stochastic SEIIaR Commuter model, I choose the following proced
 		P_{I\to R} = P_{I_a\to R} &= 1 - \exp{(-\Delta t/\tau_I)} 
 	\end{align*}
 	Calculate the number of days $D = \texttt{int}(t_N)$, and the number of steps per half day $S = \texttt{int}(1/(2\Delta t))$.\; 
-	\For{$d = 0,\dots, D - 1$}
+	\For{$d = 1,\dots, D$}
 		{
-		$i \gets 2 \times d \times S$\;
-		\For{$j = 0,\dots, S - 1$}
+		$i \gets 2 \times (d-1) \times S$\;
+		\For{$j = 1,\dots, S$}
 			{
 			Calculate the number of people in each town, $\beta$,
 				$$
@@ -52,7 +52,7 @@ To implement the Stochastic SEIIaR Commuter model, I choose the following proced
 				P_{S\to E,\beta} = 1 - \exp{\left( - \Delta t \beta_0 \frac{r_s I_{\beta} + r_a I_{a,\beta}}{N}\right)} 
 				$$
 			}
-			Do a normal SEIIaR step for each group of people $\alpha,\beta = 1,\dots,m$, exactly as described in the introduction to update to the present state $X_{(i+j+1)\alpha\beta\gamma}$\;   
+			Do a normal SEIIaR step for each group of people $\alpha,\beta=1,\dots,m$, exactly as described in the introduction to update to the present state $X_{(i+j+1)\alpha\beta\gamma}$\;   
 		$i \gets i + S$\;
 		\For{$j = 0,\dots, S - 1$}
 			{
@@ -62,84 +62,158 @@ To implement the Stochastic SEIIaR Commuter model, I choose the following proced
 		\caption{Description of implementation of the SEIIaR commuter model.}
 \end{algorithm} 
 
-Listing \ref{lst:commuter} shows the same algorithm as described above implemented in python.
+%Listing \ref{lst:commuter} shows the same algorithm as described above implemented in python.
 
-\begin{lstlisting}[language=Python,label={lst:commuter},caption={SEIIaR commuter algorithm implemented in python}]
-@nb.njit()
-def SEIIaR_commuter_step(X,Pse,Pei,Peia,Pir,Piar):
-
-    Dse          = np.random.binomial(X[0],Pse)
-    Dei,Deia,Dee = np.random.multinomial(X[1], (Pei,Peia,1-Pei-Peia) )
-    Dir          = np.random.binomial(X[2], Pir)
-    Diar         = np.random.binomial(X[3], Piar)
-
-    return np.array([X[0] - Dse,
-                     X[1] - Dei - Deia + Dse,
-                     X[2] - Dir + Dei,
-                     X[3] - Diar + Deia,
-                     X[4] + Dir + Diar])
-
-@nb.njit()
-def SEIIaR_commuter(M,X_0,tN,dt):
-    
-    # set this to ones initially, but change it 
-    # for each step, as it depends on the number of infected.
-
-    m    = np.shape(M)[0] 
-    Pse  = np.ones(m)
-
-    Pei  = fs * (1 - np.exp(-dt/tau_E))
-    Peia = fa * (1 - np.exp(-dt/tau_E))
-    Pir  = 1 - np.exp(-dt/tau_I)
-    Piar = 1 - np.exp(-dt/tau_I)
-
-    T = np.arange(0,tN+dt,dt)
-    n = len(T)
-
-    X          = np.zeros((n,m,m,5),dtype = np.int64)
-    X[0,:,:,:] = X_0
-
-    # The loop below assumes that the simulation is
-    # runned for a whole number of days, with 0.5 divisible by dt,
-    # so that the number of steps are evenly split into night and day.
-    
-    assert( int(0.5 / dt) * dt  == 0.5 )
-
-    step_length = int(1/(2*dt))
-    days       = int(tN)
-    
-    for day in range(days):
-
-        i = day * 2 * step_length # current start index
-        
-        for j in range(step_length):
-
-            # Daytime simulation
-            
-            N = np.sum(M,axis = 0)
-            I = X[i+j,:,:,2:4]
-            I = np.sum(I, axis = 0)
-            Pse = 1 - np.exp(- dt * beta * 1/N * ( rs * I[:,0] + ra * I[:,1] ))
-            for k in range(m):
-                for l in range(m):
-                    X[i+j+1,k,l,:] = SEIIaR_commuter_step(X[i+j,k,l,:],Pse[k],Pei,Peia,Pir,Piar)
-
-        i += step_length
-
-        for j in range(step_length):
-
-            # Night simulation 
-            
-            N = np.sum(M,axis = 1)
-            I = X[i+j,:,:,2:4]
-            I = np.sum(I, axis = 1)
-            Pse = 1 - np.exp(- dt * beta * 1/N * ( rs * I[:,0] + ra * I[:,1] ))
-            for k in range(m):
-                for l in range(m):
-                    X[i+j+1,l,k,:] = SEIIaR_commuter_step(X[i+j,l,k,:],Pse[k],Pei,Peia,Pir,Piar)
-
-    return T, X
-\end{lstlisting}
+%\begin{lstlisting}[language=Python,label={lst:commuter},caption={SEIIaR commuter algorithm implemented in python}]
+%beta  = 0.55
+%ra    = 0.1
+%rs    = 1.
+%fs    = 0.6
+%fa    = 0.4
+%tau_E = 3
+%tau_I = 7
+%
+%@nb.njit()
+%def SEIIaR_commuter_step(X,Pse,Pei,Peia,Pir,Piar):
+%    """
+%    Function for doing one step of the stochastic SEIIaR commuter model.
+%
+%    Parameters
+%    ----------
+%    X : array
+%        Previous state of system, i.e. [S,E,I,I_a,R].
+%    Pse : float
+%        Probability of transitioning from S to E
+%    Pei : float
+%        Probability of transitioning from E to I
+%    Peia : float
+%        Probability of transitioning from E to Ia
+%    Pir  : float
+%        Probability of transitioning from I to R
+%    Piar : float
+%        Probability of transitioning from Ia to R
+%
+%    Returns
+%    -------
+%    X(t + dt ) : array
+%        Next state of system. 
+%
+%    """
+%
+%    Dse          = np.random.binomial(X[0],Pse)
+%    Dei,Deia,Dee = np.random.multinomial(X[1], (Pei,Peia,1-Pei-Peia) )
+%    Dir          = np.random.binomial(X[2], Pir)
+%    Diar         = np.random.binomial(X[3], Piar)
+%
+%    D = np.array([- Dse,
+%                  - Dei - Deia + Dse,
+%                  - Dir + Dei,
+%                  - Diar+ Deia,
+%                    Dir + Diar])
+%    return X + D
+%    """
+%    return np.array([X[0] - Dse,
+%                     X[1] - Dei - Deia + Dse,
+%                     X[2] - Dir + Dei,
+%                     X[3] - Diar + Deia,
+%                     X[4] + Dir + Diar])
+%    """
+%    
+%@nb.njit()
+%def SEIIaR_commuter(M,X_0,tN,dt):
+%    """
+%    Function for solving the time evolution of the stochastic SEIIaR commuter model.
+%    
+%    Parameters
+%    ----------
+%    M : array
+%        Population matrix
+%    X_0 : array
+%        Initial state of system
+%    tN : float
+%        End time, in days.
+%    dt : float
+%        Time step, in days.
+%    
+%    Returns
+%    -------
+%    T : array
+%        Time values from 0 to tN spaced by dt.
+%    X : array
+%        The state of the system for each time in T.  
+%    
+%    """
+%
+%    m    = np.shape(M)[0] 
+%    
+%    # set this to ones initially, but change it 
+%    # for each step, as it depends on the number of infected.
+%
+%    Pse  = np.ones(m)
+%
+%    Pei  = fs * (1 - np.exp(-dt/tau_E))
+%    Peia = fa * (1 - np.exp(-dt/tau_E))
+%    Pir  = 1 - np.exp(-dt/tau_I)
+%    Piar = 1 - np.exp(-dt/tau_I)
+%
+%    T = np.arange(0,tN+dt,dt)
+%    n = len(T)
+%
+%    X          = np.zeros((n,m,m,5),dtype = np.int64)
+%    X[0,:,:,:] = X_0
+%
+%    # The loop below assumes that the simulation is
+%    # runned for a whole number of days, with 0.5 divisible by dt,
+%    # so that the number of steps are evenly split into night and day.
+%    
+%    assert( int(0.5 / dt) * dt  == 0.5 )
+%
+%    step_length = int(1/(2*dt))
+%    days       = int(tN)
+%    
+%    for day in range(days):
+%
+%        i = day * 2 * step_length # current start index
+%        
+%        for j in range(step_length):
+%
+%            # Night simulation
+%            
+%            N = np.sum(M,axis = 0)            
+%            I = X[i+j,:,:,2:4]
+%            I = np.sum(I, axis = 0)            
+%            Pse = 1 - np.exp(- dt * beta * 1/N * ( rs * I[:,0] + ra * I[:,1] ))
+%            
+%            for k in range(m):
+%                # If there are no people in the current town, Pse will be nan,
+%                # so the value should be the same as the previous value 
+%                if N[k] == 0:
+%                    X[i+j+1,k,:,:] = X[i+j,k,:,:]
+%                    continue
+%                for l in range(m):
+%                    X[i+j+1,k,l,:] = SEIIaR_commuter_step(X[i+j,k,l,:],Pse[k],Pei,Peia,Pir,Piar)
+%
+%        i += step_length
+%
+%        for j in range(step_length):
+%
+%            # Day simulation 
+%            
+%            N = np.sum(M,axis = 1)
+%            I = X[i+j,:,:,2:4]
+%            I = np.sum(I, axis = 1)
+%            Pse = 1 - np.exp(- dt * beta * 1/N * ( rs * I[:,0] + ra * I[:,1] ))
+%            for k in range(m):
+%                # If there are no people in the current town, Pse will be nan,
+%                # so the value should be the same as the previous value 
+%                if N[k] == 0:
+%                    X[i+j+1,:,k,:] = X[i+j,:,k,:]
+%                    continue
+%                for l in range(m):
+%                    X[i+j+1,l,k,:] = SEIIaR_commuter_step(X[i+j,l,k,:],Pse[k],Pei,Peia,Pir,Piar)
+%
+%    return T, X
+%\end{lstlisting}
 
 To check that the system behaves as expected, we simulate the same scenario, only with another matrix which now represents \textit{no} flow of workers to the other areas during daytime:
 \begin{equation}\label{eq:test_matrix}
@@ -149,7 +223,7 @@ To check that the system behaves as expected, we simulate the same scenario, onl
 	\end{bmatrix}.
 \end{equation}
 
-The time-evolution of the different variables are shown in figure \ref{fig:test_commuter}, in which it is apparent that the exposed people in the small city never infect those in the large city, as we expect. Furthermore, we see that the epidemic in area $1$ evolves slower in this case --- the peak of the infected is delayed by approximately $25$ days. This is also as expected, since more potential carriers of infection are available when the two towns mix during daytime. The expected behaviour is also observed when the exposed start out in area $2$, but a plot of this is not included, for brevity. 
+The time-evolution of the different variables are shown in figure \ref{fig:test_commuter}, in which it is apparent that the exposed people in the small city never infect those in the large city, as we expect. The expected behaviour is also observed when the exposed start out in area $2$, but a plot of this is not included, for brevity. 
 
 To do a second test we let all the $10000$ of the people living in town $1$ work in town $2$. That is, we use the population matrix in equation \eqref{eq:test_matrix_2}
 \begin{equation}\label{eq:test_matrix_2}
@@ -158,20 +232,22 @@ To do a second test we let all the $10000$ of the people living in town $1$ work
 		0 & 100000 
 	\end{bmatrix}.
 \end{equation}
-We simulate the same situation, with $25$ of the $10000$ people initially exposed. This should make the evolution of the variables approximately in sync. This is indeed what we observe, in figure \ref{fig:test_commuter_2}, as the number of infected people in each town are closely synced.
+We simulate the same situation, with $25$ of the $10000$ people initially exposed. This should make the evolution of the variables approximately in sync. This is indeed what we observe, in figure \ref{fig:test_commuter_2}, as the number of infected people in each town are more in sync than in figure \ref{fig:commuter_2city}.
+
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=0.6\columnwidth]{../fig/test_commuter.pdf}
-	\caption{Solutions of Stochastic SEIIaR commuter model for the $2$-city case, with the matrix $\mathbf{\widetilde{M}}$ in equation \eqref{eq:test_matrix}.}
+\begin{minipage}[c]{0.49\columnwidth}
+	\includegraphics[width=\columnwidth]{../fig/test_commuter.pdf}
+	\captionof{figure}{Solutions of Stochastic SEIIaR commuter model for the $2$-city case, with the matrix $\mathbf{\widetilde{M}}$ in equation \eqref{eq:test_matrix}.}
 	\label{fig:test_commuter}
-\end{figure}
-
-\begin{figure}[htb]
-	\centering
-	\includegraphics[width=0.6\columnwidth]{../fig/test_commuter_2.pdf}
-	\caption{Solutions of Stochastic SEIIaR commuter model for the $2$-city case, with the matrix $\mathbf{\overline{M}}$ in equation \eqref{eq:test_matrix_2}.}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{0.49\columnwidth}
+	\includegraphics[width=\columnwidth]{../fig/test_commuter_2.pdf}
+	\captionof{figure}{Solutions of Stochastic SEIIaR commuter model for the $2$-city case, with the matrix $\mathbf{\overline{M}}$ in equation \eqref{eq:test_matrix_2}.}
 	\label{fig:test_commuter_2}
+\end{minipage}
 \end{figure}
 
 \clearpage
